<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_name">Bengali Keyboard</string>
    <string name="spell_checker_service_name">Bengali Keyboard Spell Checker</string>
    <string name="english_ime_settings">Bengali Keyboard Settings</string>
    <string name="android_spell_checker_settings">Bengali Keyboard Spell Checker Settings</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="use_contacts_for_spellchecking_option_title">Look up contact names</string>
    <string name="use_contacts_for_spellchecking_option_summary">Spell checker uses entries from your contact list</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="settings_screen_preferences">Preferences</string>
    <string name="settings_screen_accounts">Accounts &amp; Privacy</string>
    <string name="settings_screen_appearance">Appearance &amp; Layouts</string>
    <string name="settings_screen_gesture">Gesture Typing</string>
    <string name="settings_screen_correction">Text correction</string>
    <string name="settings_screen_advanced">Advanced</string>
    <string name="settings_screen_theme">Theme</string>
    <string name="enable_split_keyboard">Enable split keyboard</string>
    <string name="include_other_imes_in_language_switch_list">Switch to other input methods</string>
    <string name="include_other_imes_in_language_switch_list_summary">Language switch key covers other input methods too</string>
    <string name="show_language_switch_key">Language switch key</string>
    <string name="show_language_switch_key_summary">Show when multiple input languages are enabled</string>
    <string name="key_preview_popup_dismiss_delay">Key popup dismiss delay</string>
    <string name="key_preview_popup_dismiss_no_delay">No delay</string>
    <string name="key_preview_popup_dismiss_default_delay">Default</string>
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <string name="settings_system_default">System default</string>
    <string name="use_contacts_dict">Suggest Contact names</string>
    <string name="use_contacts_dict_summary">Use names from Contacts for suggestions and corrections</string>
    <string name="use_personalized_dicts">Personalized suggestions</string>
    <string name="enable_metrics_logging">"Improve <xliff:g example="Android Keyboard" id="APPLICATION_NAME">%s</xliff:g>"</string>
    <string name="use_double_space_period">Double-space period</string>
    <string name="use_double_space_period_summary">Double tap on spacebar inserts a period followed by a space</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="edit_personal_dictionary">Personal dictionary</string>
    <string name="configure_dictionaries_title">Add-on dictionaries</string>
    <string name="main_dictionary">Main dictionary</string>
    <string name="prefs_show_suggestions">Show correction suggestions</string>
    <string name="prefs_show_suggestions_summary">Display suggested words while typing</string>
    <string name="prefs_block_potentially_offensive_title">Block offensive words</string>
    <string name="prefs_block_potentially_offensive_summary">Do not suggest potentially offensive words</string>
    <string name="auto_correction">Auto-correction</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="bigram_prediction">Next-word suggestions</string>
    <string name="bigram_prediction_summary">Use the previous word in making suggestions</string>
    <string name="gesture_input">Enable gesture typing</string>
    <string name="gesture_input_summary">Input a word by sliding through the letters</string>
    <string name="gesture_preview_trail">Show gesture trail</string>
    <string name="gesture_floating_preview_text">Dynamic floating preview</string>
    <string name="gesture_floating_preview_text_summary">See the suggested word while gesturing</string>
    <string name="gesture_space_aware">Phrase gesture</string>
    <string name="gesture_space_aware_summary">Input spaces during gestures by gliding to the space key</string>
    <string name="voice_input">Voice input key</string>
    <string name="voice_input_disabled_summary">No voice input methods enabled. Check Languages&#160;&amp; input settings.</string>
    <string name="configure_input_method">Configure input methods</string>
    <string name="language_selection_title">Languages</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="select_language">Languages</string>
    <string name="hint_add_to_dictionary">Tap again to save</string>
    <string name="hint_add_to_dictionary_without_word">Tap here to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="keyboard_layout">Keyboard theme</string>
    <string name="number_row">Number row</string>
    <string name="number_row_summary">Always show number row</string>
    <string name="prefs_resize_keyboard">Enable keyboard resizing</string>
    <string name="prefs_keyboard_height_scale">Keyboard height scale</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="no_accounts_selected">No accounts selected</string>
    <string name="account_selected">Currently using <xliff:g example="someone@example.com" id="EMAIL_ADDRESS">%1$s</xliff:g></string>
    <string name="account_select_ok">OK</string>
    <string name="account_select_cancel">Cancel</string>
    <string name="account_select_sign_out">Sign out</string>
    <string name="account_select_title">Select an account to use</string>
    <string name="subtype_bn_BD">Bangla</string>
    <string name="subtype_en_GB">English (UK)</string>
    <string name="subtype_en_US">English</string>
    <string name="subtype_es_US">Spanish (US)</string>
    <string name="subtype_hi_ZZ">Hinglish</string>
    <string name="subtype_sr_ZZ">Serbian (Latin)</string>
    <string name="subtype_with_layout_en_GB">English (UK) (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_en_US">English (US) (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_es_US">Spanish (US) (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_hi_ZZ">Hinglish (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_with_layout_sr_ZZ">Serbian (<xliff:g example="QWERTY" id="KEYBOARD_LAYOUT">%s</xliff:g>)</string>
    <string name="subtype_generic_traditional"><xliff:g example="Nepali" id="LANGUAGE_NAME">%s</xliff:g> (Traditional)</string>
    <string name="subtype_generic_compact"><xliff:g example="Hindi" id="LANGUAGE_NAME">%s</xliff:g> (Compact)</string>
    <string name="subtype_no_language">No language (Alphabet)</string>
    <string name="subtype_no_language_qwerty">Alphabet (QWERTY)</string>
    <string name="subtype_no_language_qwertz">Alphabet (QWERTZ)</string>
    <string name="subtype_no_language_azerty">Alphabet (AZERTY)</string>
    <string name="subtype_no_language_dvorak">Alphabet (Dvorak)</string>
    <string name="subtype_no_language_colemak">Alphabet (Colemak)</string>
    <string name="subtype_no_language_pcqwerty">Alphabet (PC)</string>
    <string name="subtype_emoji">Emoji</string>
    <string name="keyboard_theme">Keyboard theme</string>
    <string name="keyboard_theme_material_dark" translatable="false">Material Dark (AMOLED)</string>
    <string name="keyboard_theme_material_light" translatable="false">Material Light</string>
    <string name="keyboard_theme_dark_border" translatable="false">Material Dark Border</string>
    <string name="keyboard_theme_light_border" translatable="false">Material Light Border</string>
    <string name="custom_input_styles_title">Custom input styles</string>
    <string name="add_style">Add style</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="subtype_locale">Language</string>
    <string name="keyboard_layout_set">Layout</string>
    <string name="custom_input_style_note_message">"Your custom input style needs to be enabled before you start using it. Do you want to enable it now?"</string>
    <string name="enable">Enable</string>
    <string name="not_now">Not now</string>
    <string name="custom_input_style_already_exists">"The same input style already exists: <xliff:g example="English (Dvorak)" id="INPUT_STYLE_NAME">%s</xliff:g>"</string>
    <string name="prefs_keypress_vibration_duration_settings">Keypress vibration duration</string>
    <string name="prefs_keypress_sound_volume_settings">Keypress sound volume</string>
    <string name="prefs_key_longpress_timeout_settings">Key long press delay</string>
    <string name="prefs_enable_emoji_alt_physical_key">Emoji for physical keyboard</string>
    <string name="prefs_enable_emoji_alt_physical_key_summary">Physical Alt key shows the emoji palette</string>
    <string name="button_default">Default</string>
    <string name="setup_welcome_title">"Welcome to <xliff:g example="Android Keyboard" id="APPLICATION_NAME">%s</xliff:g>"</string>
    <string name="setup_welcome_additional_description">with Gesture Typing</string>
    <string name="setup_start_action">Get started</string>
    <string name="setup_next_action">Next step</string>
    <string name="setup_steps_title">"Setting up <xliff:g example="Android Keyboard" id="APPLICATION_NAME">%s</xliff:g>"</string>
    <string name="setup_step1_bullet" translatable="false">1</string>
    <string name="install_dict">Install</string>
    <string name="cancel_download_dict">Cancel</string>
    <string name="delete_dict">Delete</string>
    <string name="space_trackpad">Space bar trackpad</string>
    <string name="space_trackpad_summary">Swipe on the spacebar to move the cursor</string>
    <string name="prefs_force_incognito_mode">Force incognito mode</string>
    <string name="prefs_force_incognito_mode_summary">Disable learning of new words</string>
    <string name="premium">Premium</string>
    <string name="why_do_you_see_ads">Why do you see ads?</string>
    <string name="revenue_from_adds">Revenue from ads help us to continuously improve our app for you. After buying premium, ads will remove from your app</string>
    <string name="support_us">Support us</string>
    <string name="no_ads">No Ads</string>
    <string name="buy_premium">Buy premium here for removing ads forever</string>
    <string name="unlock_premium">Unlock Premium</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="moreapps">More Apps</string>
    <string name="exit">Exit</string>
    <string name="rate_us">Rate us</string>
    <string name="would_you_like_to_rateus">Would you like to rate us?</string>
    <string name="test_keyboard">Test Keyboard</string>
    <string name="enable_keyboard">Enable Keyboard</string>
    <string name="select_keyboard">Select Keyboard</string>
    <string name="themes">Themes</string>
    <string name="change_language">Change Language</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
</resources>