<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_test_keyboard"
            android:icon="@drawable/ic_test_keyboard"
            android:title="@string/test_keyboard" />
        <item
            android:id="@+id/nav_enable_keyboard"
            android:icon="@drawable/ic_b1"
            android:title="@string/enable_keyboard" />
        <item
            android:id="@+id/nav_select_keyboard"
            android:icon="@drawable/ic_b2"
            android:title="@string/select_keyboard" />

        <item
            android:id="@+id/nav_change_language"
            android:icon="@drawable/internet"
            android:title="@string/language" />
        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/ic_b3"
            android:title="@string/themes" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_b4"
            android:title="@string/change_language" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_app_policy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_baseline_feedback_24"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_more_apps"
                android:icon="@drawable/ic_more_apps"
                android:title="@string/moreapps" />
        </menu>
    </item>

</menu>