<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_screen_preferences">
    <CheckBoxPreference
        android:key="auto_cap"
        android:title="@string/auto_cap"
        android:summary="@string/auto_cap_summary"
        android:defaultValue="true"
        android:persistent="true" />
    <CheckBoxPreference
        android:key="vibrate_on"
        android:title="@string/vibrate_on_keypress"
        android:defaultValue="@bool/config_default_vibration_enabled"
        android:persistent="true" />
    <CheckBoxPreference
        android:key="sound_on"
        android:title="@string/sound_on_keypress"
        android:defaultValue="@bool/config_default_sound_enabled"
        android:persistent="true" />
    <CheckBoxPreference
        android:key="popup_on"
        android:title="@string/popup_on_keypress"
        android:defaultValue="@bool/config_default_key_preview_popup"
        android:persistent="true" />
</PreferenceScreen>
