<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:latin="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings_screen_advanced"
    android:key="screen_advanced">
    <CheckBoxPreference
        android:key="pref_always_incognito_mode"
        android:title="@string/prefs_force_incognito_mode"
        android:summary="@string/prefs_force_incognito_mode_summary"
        android:defaultValue="false" />
    <com.german.keyboard.app.free.latin.settings.SeekBarDialogPreference
        android:key="pref_vibration_duration_settings"
        android:title="@string/prefs_keypress_vibration_duration_settings"
        latin:maxValue="@integer/config_max_vibration_duration" />
    <com.german.keyboard.app.free.latin.settings.SeekBarDialogPreference
        android:key="pref_keypress_sound_volume"
        android:title="@string/prefs_keypress_sound_volume_settings"
        latin:maxValue="100" /> <!-- percent -->
    <com.german.keyboard.app.free.latin.settings.SeekBarDialogPreference
        android:key="pref_key_longpress_timeout"
        android:title="@string/prefs_key_longpress_timeout_settings"
        latin:minValue="@integer/config_min_longpress_timeout"
        latin:maxValue="@integer/config_max_longpress_timeout"
        latin:stepValue="@integer/config_longpress_timeout_step" />
    <CheckBoxPreference
        android:key="pref_space_trackpad"
        android:title="@string/space_trackpad"
        android:summary="@string/space_trackpad_summary"
        android:defaultValue="true" />
    <PreferenceScreen
        android:fragment="com.german.keyboard.app.free.latin.settings.DebugSettingsFragment"
        android:key="screen_debug"
        android:title="Debug settings"
        android:defaultValue="false"
        android:persistent="true" />
</PreferenceScreen>
