<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:latin="http://schemas.android.com/apk/res-auto"
    android:key="screen_appearance"
    android:title="@string/settings_screen_appearance">
    <CheckBoxPreference
        android:key="pref_split_keyboard"
        android:title="@string/enable_split_keyboard"
        android:persistent="true"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="pref_resize_keyboard"
        android:title="@string/prefs_resize_keyboard"
        android:defaultValue="false"
        android:persistent="true" />
    <com.german.keyboard.app.free.latin.settings.SeekBarDialogPreference
        android:dependency="pref_resize_keyboard"
        android:key="pref_keyboard_height_scale"
        android:title="@string/prefs_keyboard_height_scale"
        latin:minValue="50"
        latin:maxValue="150" /> <!-- percentage -->
</PreferenceScreen>