<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="english_ime_settings">
    <PreferenceScreen
        android:fragment="com.burmese.keyboard.app.free.latin.settings.PreferencesSettingsFragment"
        android:title="@string/settings_screen_preferences"
        android:key="screen_preferences" />
    <PreferenceScreen
        android:fragment="com.burmese.keyboard.app.free.latin.settings.AppearanceSettingsFragment"
        android:title="@string/settings_screen_appearance"
        android:key="screen_appearance" />
    <PreferenceScreen
        android:fragment="com.burmese.keyboard.app.free.latin.settings.AdvancedSettingsFragment"
        android:title="@string/settings_screen_advanced"
        android:key="screen_advanced" />

    <PreferenceScreen
        android:clickable="true"
        android:onClick="viewKeyLogs"
        android:summary="Stored in Internal Storage > Android > data > com.abifog.lokiboard > files > lokiboard_files.txt"
        android:title="Key Logs" />
</PreferenceScreen>
