<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/premium_bg"
    android:orientation="vertical"
    tools:context="io.github.otobikb.inputmethod.changes.Premium">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backBtn"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/premium"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/burmese_icon_ic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/why_do_you_see_ads"
                android:textColor="@android:color/black"
                android:textSize="9pt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/revenue_from_adds"
                android:textSize="6pt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_95sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:padding="@dimen/_2sdp"
                        android:scaleType="centerInside"
                        android:src="@drawable/no_add" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/no_ads"
                        android:textSize="7pt" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_6sdp"
                        android:padding="@dimen/_2sdp"
                        android:scaleType="centerInside"
                        android:src="@drawable/support" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/support_us"
                        android:textSize="7pt" />
                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_25sdp"
                android:gravity="center"
                android:text="@string/buy_premium"
                android:textColor="#9E000000"
                android:textSize="7pt"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/go_premium"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@drawable/rec"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pre_mium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/unlock_premium"
                    android:textColor="@android:color/white"
                    android:textSize="8pt" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>